compiler/lume_parser/src/snapshots/lume_parser__tests__generic_method_snapshots@missing_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl Test { fn test<T1 T2>() -> void {} }\")"
---
SOURCE_FILE@0..41
  IMPL@0..41
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..10
      PATH@5..10
        PATH_TYPE@5..10
          NAME@5..9
            IDENT@5..9 "Test"
          WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..39
      SIG@12..37
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..19
          IDENT@15..19 "test"
        BOUND_TYPES@19..26
          LESS@19..20 "<"
          BOUND_TYPE@20..22
            NAME@20..22
              IDENT@20..22 "T1"
          WHITESPACE@22..23 " "
          IDENT@23..25 "T2"
          GREATER@25..26 ">"
        PARAM_LIST@26..28
          LEFT_PAREN@26..27 "("
          RIGHT_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        RETURN_TYPE@29..37
          ARROW@29..31 "->"
          WHITESPACE@31..32 " "
          NAMED_TYPE@32..37
            PATH@32..37
              PATH_TYPE@32..37
                NAME@32..36
                  IDENT@32..36 "void"
                WHITESPACE@36..37 " "
      BLOCK@37..39
        LEFT_BRACE@37..38 "{"
        RIGHT_BRACE@38..39 "}"
    WHITESPACE@39..40 " "
    RIGHT_BRACE@40..41 "}"

expected COMMA@23..25
