compiler/lume_parser/src/snapshots/lume_parser__tests__generic_method_snapshots@missing_generic.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_err(\"impl Test { fn test<T1,>() -> void {} }\")"
---
ExpectedIdentifier {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "impl Test { fn test<T1,>() -> void {} }",
        package: PackageId(
            0,
        ),
    },
    range: 23..24,
    actual: >,
}
