compiler/lume_parser/src/snapshots/lume_parser__tests__generic_method_snapshots@single_generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl Test { fn test<T>() -> void {} }\")"
---
SOURCE_FILE@0..37
  IMPL@0..37
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..10
      PATH@5..10
        PATH_TYPE@5..10
          NAME@5..9
            IDENT@5..9 "Test"
          WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..35
      SIG@12..33
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..19
          IDENT@15..19 "test"
        BOUND_TYPES@19..22
          LESS@19..20 "<"
          BOUND_TYPE@20..21
            NAME@20..21
              IDENT@20..21 "T"
          GREATER@21..22 ">"
        PARAM_LIST@22..24
          LEFT_PAREN@22..23 "("
          RIGHT_PAREN@23..24 ")"
        WHITESPACE@24..25 " "
        RETURN_TYPE@25..33
          ARROW@25..27 "->"
          WHITESPACE@27..28 " "
          NAMED_TYPE@28..33
            PATH@28..33
              PATH_TYPE@28..33
                NAME@28..32
                  IDENT@28..32 "void"
                WHITESPACE@32..33 " "
      BLOCK@33..35
        LEFT_BRACE@33..34 "{"
        RIGHT_BRACE@34..35 "}"
    WHITESPACE@35..36 " "
    RIGHT_BRACE@36..37 "}"
