compiler/lume_parser/src/snapshots/lume_parser__tests__generic_method_snapshots@trailing_generic_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl Test { fn test<T1,>() -> void {} }\")"
---
SOURCE_FILE@0..39
  IMPL@0..39
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..10
      PATH@5..10
        PATH_TYPE@5..10
          NAME@5..9
            IDENT@5..9 "Test"
          WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..37
      SIG@12..35
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..19
          IDENT@15..19 "test"
        BOUND_TYPES@19..24
          LESS@19..20 "<"
          BOUND_TYPE@20..22
            NAME@20..22
              IDENT@20..22 "T1"
          COMMA@22..23 ","
          GREATER@23..24 ">"
        PARAM_LIST@24..26
          LEFT_PAREN@24..25 "("
          RIGHT_PAREN@25..26 ")"
        WHITESPACE@26..27 " "
        RETURN_TYPE@27..35
          ARROW@27..29 "->"
          WHITESPACE@29..30 " "
          NAMED_TYPE@30..35
            PATH@30..35
              PATH_TYPE@30..35
                NAME@30..34
                  IDENT@30..34 "void"
                WHITESPACE@34..35 " "
      BLOCK@35..37
        LEFT_BRACE@35..36 "{"
        RIGHT_BRACE@36..37 "}"
    WHITESPACE@37..38 " "
    RIGHT_BRACE@38..39 "}"
