compiler/lume_parser/src/snapshots/lume_parser__tests__generic_struct_snapshots@missing_generic.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_err(\"struct Test<T1,> {}\")"
---
ExpectedIdentifier {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "struct Test<T1,> {}",
        package: PackageId(
            0,
        ),
    },
    range: 15..16,
    actual: >,
}
