compiler/lume_parser/src/snapshots/lume_parser__tests__generic_struct_snapshots@multiple_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"struct Test<T1, T2> {}\")"
---
SOURCE_FILE@0..22
  STRUCT@0..22
    STRUCT_KW@0..6 "struct"
    WHITESPACE@6..7 " "
    NAME@7..11
      IDENT@7..11 "Test"
    BOUND_TYPES@11..19
      LESS@11..12 "<"
      BOUND_TYPE@12..14
        NAME@12..14
          IDENT@12..14 "T1"
      COMMA@14..15 ","
      WHITESPACE@15..16 " "
      BOUND_TYPE@16..18
        NAME@16..18
          IDENT@16..18 "T2"
      GREATER@18..19 ">"
    WHITESPACE@19..20 " "
    LEFT_BRACE@20..21 "{"
    RIGHT_BRACE@21..22 "}"
